--- a/pos_hdm_fiscal/views/res_config_settings_views.xml
+++ b/pos_hdm_fiscal/views/res_config_settings_views.xml
@@ -62,7 +62,7 @@
             <div class="col-12 col-lg-6 o_setting_box">
               <div class="o_setting_left_pane"></div>
               <div class="o_setting_right_pane">
-                <label string="Last HDM Test Result"/>
+                <label for="hdm_last_test_ok" string="Last HDM Test Result"/>
                 <group>
                   <field name="hdm_last_test_ok" widget="boolean_toggle"/>
                   <field name="hdm_last_test_at"/>
