--- a/pos_hdm_fiscal/views/res_config_settings_views.xml
+++ b/pos_hdm_fiscal/views/res_config_settings_views.xml
@@ -52,6 +52,8 @@
                     <field name="hdm_password" password="True"/>
                     <field name="hdm_cashier_id"/>
                     <field name="hdm_cashier_pin" password="True"/>
+                    <field name="hdm_department_id"/>
+                    <field name="hdm_department"/>
                     <field name="hdm_print_locally"/>
                     <button string="Test Connection" name="action_hdm_test_connection" type="object" class="oe_highlight"/>
                     <button string="Clear Session" name="action_hdm_clear_session" type="object"/>
